Add highlighted style for testing

--- a/src/View/scss/Masonry.scss
+++ b/src/View/scss/Masonry.scss
@@ -48,3 +48,7 @@ $background_color_3: white;
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
+
+.highlighted {
+  background-color: #E3FCEF;
+}
