--- a/src/Demo/scss/Demo.scss
+++ b/src/Demo/scss/Demo.scss
@@ -22,6 +22,7 @@ button {
   background-color: $background_color_2;
   min-height: 100vh;
   min-width: 550px;
+  overflow: hidden;
 }
 
 .even-index {
