--- a/src/Demo/scss/Demo.scss
+++ b/src/Demo/scss/Demo.scss
@@ -1,21 +1,45 @@
-$color_1: white;
+$color_1: rgba(30, 22, 54, 0.6);
 $color_2: #111E6C;
-$background_color_1: #DD4B39;
-$background_color_2: #DCDCDC;
+$background_color_1: rgba(30, 22, 54, 0.6);
+$background_color_2: white;
 $background_color_3: transparent;
 $background_color_4: #111E6C;
 
 button {
+  display: block;
   color: $color_1;
-  background-color: $background_color_1;
-  border: 1px #DD4B39 solid;
+  background-color: white;
   border-radius: 5px;
+  border: none;
+
+  min-width: 80px;
+  max-width: 180px;
+  min-height: 60px;
+  max-height: 30px;
+
+  margin: 20px auto;
   padding: 5px 10px;
+
   font-weight: bold;
   font-size: 9pt;
+  transition: all 500ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  text-decoration: none;
   outline: none;
-  max-height: 30px;
-  min-width: 80px;
+  box-shadow: rgba(30, 22, 54, 0.4) 0 0 0 2px inset;
+}
+
+button:hover {
+  color: rgba(255, 255, 255, 0.85);
+  box-shadow: rgba(30, 22, 54, 0.7) 0 0 0 40px inset;
+}
+
+.other-hover{
+  transition: all 700ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+}
+
+.other-hover:hover {
+  color: rgba(255, 255, 255, 0.85);
+  box-shadow: rgba(30, 22, 54, 0.7) 0 80px 0 2px inset;
 }
 
 .container {
@@ -25,64 +49,11 @@ button {
   overflow: hidden;
 }
 
+.card {
+  box-shadow: -2px 3px 12px rgba(0,0,0,0.16), 0 0 13px rgba(0,0,0,0.23);
+}
+
 .even-index {
   height: 200px;
   width: 200px;
-}
-
-.btn-hidden {
-  opacity: 0;
-}
-
-.btn-control {
-  background-color: $background_color_3;
-  color: $color_2;
-  font-size: 1rem;
-  font-weight: 500;
-  min-width: 120px;
-  min-height: 35px;
-  border: 2px solid #111E6C;
-  border-radius: 5px;
-  &:hover {
-    background-color: $background_color_4;
-    color: $color_1;
-    font-weight: 700;
-  }
-}
-
-.btn-add {
-  margin-left: 2rem;
-}
-
-.btn-remove {
-  margin-left: 1.5rem;
-}
-
-.control-view {
-  margin-left: 2rem;
-  display: block;
-  padding-top: 100px;
-}
-
-.input-demo {
-  min-height: 29px;
-  border-radius: 5px;
-  outline: none;
-  font-size: 1rem;
-}
-
-.input-itemId {
-  padding-left: 0.5rem;
-  min-width: 250px;
-}
-
-.input-index {
-  max-width: 70px;
-  text-align: center;
-  margin-left: 2rem;
-}
-
-.btn-load-more {
-  min-height: 32px;
-  min-width: 150px;
 }
