:bug: Fix List full-fill width

--- a/src/View/scss/Masonry.scss
+++ b/src/View/scss/Masonry.scss
@@ -4,6 +4,7 @@ $background_color_2: rgba(0, 0, 0, 0.2);
 $background_color_3: white;
 
 .masonry-parent {
+  width: 100%;
   >div {
     &::-webkit-scrollbar-track {
       background-color: $background_color_1;
