--- a/src/View/anim/zoomIn.scss
+++ b/src/View/anim/zoomIn.scss
@@ -1,14 +1,15 @@
 @keyframes zoomIn {
     from {
-        opacity: 0;
-        transform: scale(0.3, 0.3);
+        opacity: 0.5;
+        transform: scale(0.9, 0.9);
     }
 
-    50% {
+    to {
         opacity: 1;
+        transform: scale(1, 1);
     }
 }
 
 .zoomIn {
-    animation: zoomIn 0.25s linear;
+    animation: zoomIn 0.15s linear;
 }
