--- a/src/View/scss/Masonry.scss
+++ b/src/View/scss/Masonry.scss
@@ -3,22 +3,24 @@ $background_color_1: transparent;
 $background_color_2: rgba(0, 0, 0, 0.2);
 $background_color_3: white;
 
-.masonry-parent {
+.masonry {
   width: 100%;
-  >div {
-    &::-webkit-scrollbar-track {
-      background-color: $background_color_1;
-    }
-    &::-webkit-scrollbar {
-      width: 12px;
-      background-color: $background_color_1;
-    }
-    &::-webkit-scrollbar-thumb {
-      border-radius: 5px;
-      background-color: $background_color_2;
-    }
+
+  &::-webkit-scrollbar-track {
+    background-color: $background_color_1;
+  }
+
+  &::-webkit-scrollbar {
+    width: 0;
+    background-color: $background_color_1;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: $background_color_2;
   }
 }
+
 .btn-scroll-bottom {
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
   background-color: $background_color_3;
@@ -30,14 +32,16 @@ $background_color_3: white;
   cursor: pointer;
   border-radius: 50%;
   padding: 0;
-  >i {
+
+  > i {
     border: solid #a1aab2;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 2px;
   }
+
   &:hover {
-    >i {
+    > i {
       border: solid #0068ff;
       border-width: 0 3px 3px 0;
       display: inline-block;
@@ -45,6 +49,7 @@ $background_color_3: white;
     }
   }
 }
+
 .down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
